# JDB

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GPL3  JDB.pro  README.md  README_ES.md  TODO  TODO.md  build_deps_ubuntu_14_04_x86_64.sh  build_for_windows_from_ubuntu.sh  deploy.sh
build_deps/ubuntu_18_04_x86_64/: build_deps.sh  install_m2g.sh  install_packages.sh  install_sfml.sh  install_tgui.sh
data/audio/player/: LICENSE
data/shaders/: particles_system_fragment_shader.shader
docker/ubuntu_18_04_x86_64/: Dockerfile  build_zip.sh  launcher.sh
docker/ubuntu_18_04_x86_64/build_deps/: install_m2g.sh  install_packages.sh  install_sfml.sh  install_tgui.sh
godot-project/: project.godot
godot-project/gameplay/dangers/fire/: fire.gd  fire.png.import  fire.tscn
godot-project/gameplay/main/: conveyor_belt.png.import  grinder_back.png.import  grinder_front.png.import  main.gd  main.tscn
godot-project/gameplay/sandwich/: sandwich.gd  sandwich.tscn  sandwich_01.png.import
godot-project/gameplay/sandwiches_manager/: sandwiches_manager.gd
godot-project/gameplay/tool/: tool.gd  tool.tscn  tools.png.import
godot-project/gameplay/tool/audio/: extinguisher.ogg.import  gavel.ogg.import  hand.ogg.import  lighter.ogg.import
godot-project/globals/singletons/: dangers_manager.gd
godot-project/globals/types/: danger.gd  tool_type.gd
include/: jdb.hpp  paths.hpp
include/dangers/: danger.hpp  danger_data.hpp  danger_data_parser.hpp  danger_mutation.hpp  danger_state.hpp  player_action_response.hpp  state_distance_transition.hpp  state_time_transition.hpp  stun_type.hpp
include/game_states/: campaign_level_selection_menu.hpp  credits_screen.hpp  end_of_campaign_screen.hpp  end_of_demo_screen.hpp  game_over_screen.hpp  game_state.hpp  gui_menu.hpp  level_intro.hpp  main_menu.hpp  pause_menu.hpp
include/level_ui/: campaign_level_ui.hpp  level_ui.hpp  survival_level_ui.hpp
include/levels/: campaign_level.hpp  conveyor_belt.hpp  level.hpp  level_difficulty.hpp  survival_level.hpp
include/profiles/: profile.hpp  profile_json_parser.hpp
include/sandwiches/: sandwich.hpp  sandwich_data.hpp  sandwiches_manager.hpp
include/tools/: tool.hpp  tool_type.hpp
include/utilities/: base_line.hpp  game_difficulty.hpp  level_book.hpp  sound_manager.hpp  texture_picture.hpp  timer.hpp  unicode_file_reader.hpp  version_string.hpp.in  volume_control_panel.hpp
project/: JDB.pro
project/src/: jdb.cpp  jdb.hpp  level.cpp  level.hpp  main.cpp
project/src/dangers/: danger.cpp  danger.hpp  danger_data.cpp  danger_data.hpp  danger_state.cpp  danger_state.hpp  dangerstate.cpp  dangerstate.hpp  player_action.hpp  player_action_response.cpp  player_action_response.hpp
project/src/dependencies/: dependencies.hpp
project/src/dependencies/GL3W/: gl3w.c
project/src/dependencies/graphics/src/: graphics_library.cpp  graphics_library.hpp  graphics_loader.cpp  graphics_loader.hpp  library.cpp  library.hpp
project/src/dependencies/graphics/src/dependencies/: dependencies.hpp
project/src/dependencies/graphics/src/drawables/: animation.cpp  animation.hpp  (+8 more)
project/src/levels/: campaign_level.hpp  conveyor_belt.cpp  conveyor_belt.hpp  level.cpp  level.hpp  survival_level.cpp  survival_level.hpp
project/src/sandwiches/: sandwich.cpp  sandwich.hpp  sandwich_data.cpp  sandwich_data.hpp
project/src/tools/: tool.cpp  tool.hpp
project/src/utilities/: base_line.cpp  base_line.hpp  timer.cpp  timer.hpp
share/applications/: sandwiches-game.desktop.in
share/jdb/audio/tools/: LICENSE
share/jdb/config/: dangers.xml
share/jdb/fonts/: LICENSE
share/jdb/img/: LICENSE
share/jdb/img/dangers/: dangers.xml
share/jdb/img/gui/: gui.xml
share/sandwiches-game/: LICENSE  end_of_demo
share/sandwiches-game/config/: dangers.json  levels.json  levels.xml
share/sandwiches-game/docs/: dangers.md
share/sandwiches-game/img/: LICENSE
share/sandwiches-game/img/dangers/: dangers.xml
share/sandwiches-game/savegames/: profile.json
src/: jdb.cpp  jdb.hpp  main.cpp  paths.hpp
src/dangers/: danger.cpp  danger.hpp  danger_data.cpp  danger_data.hpp  danger_data_parser.cpp  danger_data_parser.hpp  danger_info.hpp  danger_mutation.cpp  danger_state.cpp  danger_state.hpp  dangers_counter.cpp  dangers_counter.hpp  dangers_factory.cpp  dangers_factory.hpp  dangers_file_parser.cpp  dangers_file_parser.hpp  player_action_response.cpp  player_action_response.hpp
src/game_states/: campaign_level_selection_menu.cpp  campaign_level_selection_menu.hpp  credits_screen.cpp  credits_screen.hpp  end_of_campaign_screen.cpp  end_of_demo_screen.cpp  end_of_demo_screen.hpp  game_over_screen.cpp  game_over_screen.hpp  game_state.cpp  game_state.hpp  gui_menu.cpp  gui_menu.hpp  level_intro.cpp  level_intro.hpp  main_menu.cpp  main_menu.cpp.in  main_menu.hpp  pause_menu.cpp  pause_menu.hpp
src/graphics/: drawable.cpp  drawable.hpp  sprite.cpp  sprite.hpp  tileset.cpp  tileset.hpp
src/level_ui/: campaign_level_ui.cpp  level_ui.cpp  survival_level_ui.cpp
src/levels/: campaign_level.cpp  campaign_level.hpp  conveyor_belt.cpp  conveyor_belt.hpp  level.cpp  level.hpp  survival_level.cpp  survival_level.hpp
src/libraries/: dependencies.hpp  shader_loader.cpp
src/profiles/: profile.cpp  profile.hpp  profile_json_parser.cpp
src/sandwiches/: sandwich.cpp  sandwich.hpp  sandwich_data.cpp  sandwich_data.hpp  sandwiches_manager.cpp
src/tools/: tool.cpp  tool.hpp
src/utilities/: base_line.cpp  base_line.hpp  dependencies.hpp  game_state.cpp  game_state.hpp  level_book.cpp  level_book.hpp  shader_loader.cpp  shader_loader.hpp  sound_manager.cpp  sound_manager.hpp  texture_picture.cpp  texture_picture.hpp  timer.cpp  timer.hpp  unicode_file_reader.cpp  unicode_file_reader.hpp  version_string.hpp.in  volume_control_panel.cpp  volume_control_panel.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/dangers/: danger_data_parser.cpp  dangers_counter.cpp  dangers_factory.cpp
tests/src/profiles/: profile.cpp  profile_json_parser.cpp
tests/src/utilities/: base_line.cpp
(+17 files in other folders)
